<resources>
    <string name="app_name">MyCoffee</string>
    <string name="tags">Tags...</string>
    <string name="create_project">Create Project</string>
    <string name="add">Add +</string>
    <string name="languages">Languages...</string>
    <string name="project_name">Project Name</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="description">Description</string>
    <string name="pic_from_gallery">Choose picture from gallery</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
